update markdowns 20211002